# first_breaks_picking

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  checks.py  dev_refi.py  last_release.md  network.py  network_parts.py  pyproject.toml  pyproject_gpu.toml  release.yaml  requirements.txt  seis_model.py  setup.cfg  setup.py  sgy_reader.py  utils.py
.github/workflows/: pre-commit-workflow.yaml  release-workflow.yaml  release.yaml  tests-workflow.yaml  tomls.yaml  version_and_toml_checks.yaml
code/: data_generator.py  metrics.py  network.py  network_parts.py  picker.py  seis_dataset.py  sgy_reader.py  trace_header.csv  trainer.py  utils.py
code/signals/: sig_11.txt  sig_8.txt
codebase/: seis_model.py
codebase/signals/: sig_1.txt  sig_10.txt  sig_12.txt  sig_13.txt  sig_14.txt  sig_3.txt  sig_5.txt  sig_7.txt  sig_9.txt
de/: eikonal.py  full_inverse.py  hyper.py  pinn.py  pinn_k.py  pinn_norm.py  solver.py
eikonal/: direct.py  models.py  prev.py  refactor.py  utils.py  velocity_models.py
examples/: real_gather.sgy  real_pick.txt
fbcudasystem/: __main__.py
fbp/tomography/: ray_tracer.py  rays.py
first_breaks/: VERSION  __init__.py  __main__.py  benchmark.py  cli.py  const.py
first_breaks/_pytorch/: main_gui_torch.py  picker_torch.py  utils.py
first_breaks/_pytorch/models/: unet3plus.py
first_breaks/_pytorch/tomo/: __init__.py  forward_task.py  models.py  snippets.py  train_new.py  train_tomo.py  train_tomo_branches.py  train_transformer.py  train_velo.py  train_velo_2d.py  transformer.py  utils.py  velocity.py
first_breaks/app/: main.py  readme_auth_legal.md  readme_processing_params.md  utils.py
first_breaks/data_models/: dependent.py  independent.py  initialised_defaults.py
first_breaks/desktop/: bandfilter_widget.py  byte_and_encode_widget.py  byte_encode_unit_widget.py  combobox_with_mapping.py  export_widgets.py  extra_widgets.py  graph.py  graph_backup.py  last_folder_manager.py  main_gui.py  main_gui_torch.py  multiselect_widget.py  nn_manager.py  picking_widget.py  picks_manager_widget.py  radioset_widget.py  roi_manager.py  roi_manager_backup.py  settings_processing_widget.py  slider_with_values.py  spectrum_window.py  threads.py  tooltip_widget.py  utils.py  visualization_settings_widget.py  warn_widget.py
first_breaks/desktop/torch/: main_gui.py
first_breaks/exports/: export_picks.py
first_breaks/models/: unet3plus.py
first_breaks/picker/: picker.py
first_breaks/picking/: ipicker.py  picker.py  picker_onnx.py  picker_torch.py  picks.py  refiner.py  task.py  task_backup.py  utils.py
first_breaks/picking/picker/: ipicker.py  picker_onnx.py  picker_torch.py
first_breaks/sgy/: headers.py  interface.py  previous.py  reader.py
first_breaks/utils/: cuda.py  debug.py  engine.py  filtering.py  fourier_transforms.py  utils.py  visualizations.py
first_breaks/web_app/: app.py  dash_app.py  readme_intro.md  streamlit_app.py  utils.py
legacy/: README.md
legacy/code/: data_generator.py  file_header.csv  focal_loss.py  trace_header.csv  train.py
legacy/code/signals/: sig_1.txt  sig_10.txt  sig_11.txt  sig_12.txt  sig_13.txt  sig_14.txt  sig_15.txt  sig_2.txt  sig_3.txt  sig_4.txt  sig_5.txt  sig_7.txt  sig_8.txt  sig_9.txt
requirements/: basic.txt  cpu.txt  gpu.txt
signals/: sig_15.txt  sig_2.txt  sig_4.txt
tests/: conftest.py  test_demo_sgy.py  test_readme_examples.py
tests/test_common/: test_demo_sgy.py  test_readme_examples.py
tests/test_desktop/: test_main_gui.py
tests/test_picking/: test_picker.py  test_task.py
tests/test_sgy/: test_reader.py
