[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "first-breaks-picking-gpu"
version = "0.4.0a2"
description = "Project is devoted to pick waves that are the first to be detected on a seismogram with neural network (CUDA supported)"
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.8,<=3.10"
authors = [
    {name = "Aleksei Tarasov"},
    {name = "Aleksei Tarasov", email = "aleksei.v.tarasov@gmail.com"}
]
urls = {Homepage = "https://github.com/DaloroAT/first_breaks_picking"}
keywords = [
    "seismic",
    "first-breaks",
    "computer-vision",
    "deep-learning",
    "segmentation",
    "data-science"
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
entry-points = {console_scripts = {first-breaks-picking = "first_breaks.cli:cli_commands"}}
dependencies = [
    "requests==2.28.2",
    "numpy==1.24.2",
    "pandas==2.0.0",
    "PyQt5==5.15.9",
    "pyqtgraph==0.13.3",
    "tqdm==4.65.0",
    "click==8.1.3",
    "pydantic==2.0.3",
    "pytest==7.3.2",
    "onnxruntime-gpu==1.14.1"
]


[tool.setuptools.packages.find]
exclude = ["first_breaks._pytorch*"]
include = ["first_breaks*"]




#
#[tool.briefcase]
#project_name = "FirstBreaksPicking"
#bundle = "com.example"
#version = "0.4.0"
#url = "https://somwhere/on/the/net"
#license = "GNU General Public License v3 (GPLv3)"
#author = 'MyName Firstname'
#author_email = "cool@mailexample.com"
#
#[tool.briefcase.app.first_breaks]
#formal_name = "A Cool App"
#description = "The coolest app ever"
##icon = "src/mypysideapp/resources/appicon" # Briecase will choose the right extension depending the os (png,ico,...)
#sources = ['first_breaks']
#requires = ["requests==2.28.2",
#    "numpy==1.24.2",
#    "pandas==2.0.0",
#    "PyQt5==5.15.9",
#    "pyqtgraph==0.13.3",
#    "tqdm==4.65.0",
#    "click==8.1.3",
#    "pydantic==2.0.3",
#    "pytest==7.3.2",
#"onnxruntime-gpu==1.14.1"]
#
#
#[tool.briefcase.app.first_breaks.macOS]
#requires = []
#
#[tool.briefcase.app.first_breaks.linux]
#requires = []
#system_requires = []
#
#[tool.briefcase.app.first_breaks.windows]
#requires = []