[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "first-breaks-picking"
dynamic = ["version"]
description = "Project is devoted to pick waves that are the first to be detected on a seismogram with neural network"
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.12"
authors = [
    {name = "Aleksei Tarasov", email = "aleksei.v.tarasov@gmail.com"},
    {name = "Aleksei Tarasov"},
]
urls = {Homepage = "https://github.com/DaloroAT/first_breaks_picking"}
keywords = [
    "seismic",
    "first-breaks",
    "computer-vision",
    "deep-learning",
    "segmentation",
    "data-science"
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
entry-points = {console_scripts = {first-breaks-picking = "first_breaks.cli:cli_commands"}}
dependencies = [
    "requests>=2.28.2",
    "numpy (>=1.24.2,<2.0.0)",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "click>=8.1.3",
    "pydantic>=2.0.3",
]

[project.optional-dependencies]
engine-cpu = ["onnxruntime>=1.23"]
engine-cuda = ["onnxruntime-gpu[cuda,cudnn]>=1.23"]
engine-openvino = ["onnxruntime-openvino>=1.23", "openvino>=2025"]

desktop = [
    "PyQt5>=5.15.9",
    "pyqtgraph>=0.13.3",
]

standard = [
    "onnxruntime>=1.23",
    "PyQt5>=5.15.9",
    "pyqtgraph>=0.13.3",
]

dev = [
    "pre-commit",
    "pytest",
    "pytest-qt>=4.4.0",
]


[tool.setuptools.dynamic]
version = {file = "first_breaks/VERSION"}


[tool.setuptools.packages.find]
exclude = ["first_breaks._pytorch*"]
include = ["first_breaks*"]


[tool.briefcase]
project_name = "FirstBreaksPicking"
bundle = "com.example"
version = "0.9.0a2"
url = "https://github.com/DaloroAT/first_breaks_picking"
license = {file = "LICENSE"}
author = "Aleksei Tarasov"
author_email = "aleksei.v.tarasov@gmail.com"
long_description = "Project is devoted to pick waves that are the first to be detected on a seismogram with neural network"

# CPU build
[tool.briefcase.app.fbcpu]
formal_name = "FirstBreaksPicking (CPU)"
description = "Desktop app for seismic first-breaks-picking (CPU)"
sources = ["fbcpu"]
requires = [ ".[engine-cpu,desktop]" ]

# CUDA build
[tool.briefcase.app.fbcuda]
formal_name = "FirstBreaksPicking (CUDA)"
description = "Desktop app for seismic first-breaks-picking (CUDA)"
sources = ["fbcuda"]
requires = [ ".[engine-cuda,desktop]" ]

# OpenVINO build
[tool.briefcase.app.fbopenvino]
formal_name = "FirstBreaksPicking (OpenVINO)"
description = "Desktop app for seismic first-breaks-picking (OpenVINO)"
sources = ["fbopenvino"]
requires = [ ".[engine-openvino,desktop]" ]